# IngInf-Segundo

CyA/Algoritmia/p11/include/: point_set.h  point_types.h
CyA/Algoritmia/p11/src/: point_set.cc
CyA/Algoritmia/p12/include/: point_set.h
CyA/Computabilidad/p02_strings/: Makefile  functions.cc
CyA/Computabilidad/p02_strings/modi/: alphabet.cc  chain.cc  chain.h  functions.cc  in.txt  language.cc  main.cc  p02_strings
CyA/Computabilidad/p04_code_analyzer/: Makefile  code_struc.h  comment.h  variable.cc  variable.h
CyA/Computabilidad/p04_code_analyzer/modi/: code_struc.h  comment.cc  out.txt  statement.h
CyA/Computabilidad/p06_automata_simulator/lib/: automaton.h  automaton_loader.h
CyA/Computabilidad/p06_automata_simulator/modi/: CMakeLists.txt
CyA/Computabilidad/p08_Grammar2CNF/: CMakeLists.txt
CyA/Computabilidad/p08_Grammar2CNF/include/: alphabet.h  grammar_loader.h
CyA/Computabilidad/p08_Grammar2CNF/src/: functions.cc  grammar_loader.cc
CyA/Computabilidad/p08_Grammar2CNF/test/: grammar1.gra  grammar2.gra  output.gra
CyA/tarEntregados/: p04_Ezequiel_HernándezPoleo.tgz
EdC/P1/: a.out  alu.v  alu_tb.v  compl1.v  mux2_4.v  preprocess.v
EdC/P1/previa/: fa_v1.v  fa_v1_tb.vcd  ha_v1_tb.v  sum4_tb.vcd
EdC/P2/Ficheros/: microc_tb.v
EdC/P2/previa/: a.out  cuenta1_tb.v
EdC/test_verilog/: d_ff.v  d_ff_tb.v
Estadística/Lab01/: ESTINF_lab 01.R
Estadística/Lab02/: .RData  .Rhistory  ESTINF_lab 02_bis.R
Estadística/Lab03/: .RData  ESTINF_lab 03.R
Estadística/Lab05/: .Rhistory  ESTINF_lab 05.R
Estadística/Lab06/: .RData
Estadística/Lab08/: ESTINF_lab 08.R
Estadística/Tablas/: Thumbs.db
PrimerCuatri/CyA/Algoritmia/p12/: CMakeLists.txt
PrimerCuatri/CyA/Computabilidad/p02_strings/: alphabet.h  chain.cc  chain.h  language.h  p02_strings
PrimerCuatri/CyA/Computabilidad/p04_code_analyzer/: code_struc.cc  factorial.cc  functions.cc  functions.h  main.cc  out.txt  statement.cc
PrimerCuatri/CyA/tarEntregados/: p06_Ezequiel_HernándezPoleo.tgz  p11_emst.tgz
PrimerCuatri/EdC/P1/: alu.vcd  cl.v  fa.v  mux4_1.v  sum4.v  sum4_v2.v  ul4.v
PrimerCuatri/EdC/P1/previa/: a.out  fa_v1_tb.v  sum4.v
PrimerCuatri/EdC/P2/Ficheros/: microc.v
PrimerCuatri/EdC/P2/previa/: cuenta1.vcd
PrimerCuatri/EdC/test_verilog/: d_ff.vpp  d_ff_tb.vcd
PrimerCuatri/Estadística/: Descriptiva_21.xlsx
PrimerCuatri/Estadística/Lab02/: HIPER200.RData  HIPERTEN200.SAV
PrimerCuatri/Estadística/Lab03/: .Rhistory
PrimerCuatri/Estadística/Lab05/: .RData
PrimerCuatri/Estadística/Lab06/: .Rhistory  ESTINF_lab 06.R
PrimerCuatri/Estadística/Lab09/: ESTINF_lab 09.R
PrimerCuatri/SSOO/Progamación/backup/: CMakeLists.txt
SSOO/Progamación/backup/: CMakeLists.txt  README
SSOO/Progamación/backup/includes/: copy.h  functions.h
SSOO/Progamación/backup/src/: backup-server.cc  backup.cc  copy.cc  functions.cc
SegundoCuatri/AyEDA/P1/: CMakeLists.txt
SegundoCuatri/AyEDA/P1/include/: ant.h  functions.h  simulator.h  tape.h
SegundoCuatri/AyEDA/P1/modi/: CMakeLists.txt
SegundoCuatri/AyEDA/P1/src/: a  ant.cc  functions.cc  main.cc  simulator.cc  tape.cc
SegundoCuatri/AyEDA/P1/test/: input.txt
SegundoCuatri/AyEDA/P2/src/: derivated_ants.cc  functions.cc  simulator.cc
SegundoCuatri/AyEDA/P3/: notes
SegundoCuatri/AyEDA/P3/include/: ant.h  derivated_ants.h  derivated_tapes.h  functions.h  simulator.h  sliding_vector.h  tape.h
SegundoCuatri/AyEDA/P3/modi/: CMakeLists.txt
SegundoCuatri/AyEDA/P3/src/: ant.cc  derivated_ants.cc  derivated_tapes.cc  functions.cc  main.cc  simulator.cc  sliding_vector.cc  tape.cc
SegundoCuatri/AyEDA/P3/test/: test
SegundoCuatri/AyEDA/P4/: lista_thows  note
SegundoCuatri/AyEDA/P5/: notes
SegundoCuatri/AyEDA/P7/: CMakeLists.txt  notes
SegundoCuatri/AyEDA/modi/: CMakeLists.txt
SegundoCuatri/AyEDA/tarEntregados/: P1_HernandezPoleoEzequiel.tgz  P2_HernandezPoleo_Ezequiel.tgz  P3_HernándezPoleo_Ezequiel.tgz  P4_HernandezPoleo_Ezequiel.tgz  P5_HernandezPoleo_Ezequiel.tgz  P6_HernandezPoleo_Ezequiel.tgz
(+128 files in other folders)
